# Plume

./: Cargo.toml
docs/: INSTALL.md  UPDATE.md
plume-common/: Cargo.toml
plume-common/src/: lib.rs  utils.rs
plume-common/src/activity_pub/: mod.rs
plume-front/: Cargo.toml
plume-front/src/: main.rs  view.rs
plume-front/src/editor/: block.rs  mod.rs  title.rs  view.rs
plume-models/: Cargo.toml
plume-models/src/: lib.rs  posts.rs
src/: main.rs
src/api/: mod.rs
src/routes/: blogs.rs  comments.rs  errors.rs  instance.rs  likes.rs  medias.rs  mod.rs  notifications.rs  posts.rs  reshares.rs  session.rs  tags.rs  user.rs  well_known.rs
static/css/: main.css
templates/: base.html.tera
templates/posts/: editor.html.tera
